# connect6

./: Cargo.toml  README.md  bench.txt  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
.github/workflows/: doc.yml
assets/: check_win_avx512.asm  check_win_avx_or_sse4.1.asm  check_win_bmi1+lzcnt.asm  detect_six.asm
benches/: algorithm.rs  mcts.rs
connect6/: all.html  index.html  sidebar-items.js  struct.Builder.html  struct.Control.html  struct.Handle.html
connect6/algorithm/: constant.SIZE.html  index.html  sidebar-items.js  struct.BitBoard.html  struct.MctsState.html
connect6/board/: enum.Axis.html  enum.Stone.html  index.html  sidebar-items.js  struct.Board.html  struct.ParsePointError.html  struct.Point.html  struct.Slot.html
connect6/channel/: index.html  sidebar-items.js  struct.CmdSender.html
connect6/console/: fn.log.html  fn.read_move.html  index.html  sidebar-items.js
connect6/message/: enum.Cmd.html  enum.CmdError.html  enum.Event.html  enum.GameResultKind.html  index.html  (+5 more)
examples/: chaos.rs  console.rs  console_vs_mcts.rs  mcts.rs  mcts_bench.rs  mcts_diff_tree.rs  mcts_same_tree.rs  mcts_self_play.rs  void.rs
records/: 20220524-1.txt  20220527-1.txt  20220527-2.txt  20220529-1.txt  20220529-2.txt  20220611-1.txt  20220611-2.txt  20220614-1.txt  20221218-1.txt  20221218-2.txt  20221219-1.txt  20221220-1.txt  20221220-2.txt  20221220-3.txt  20221221-1.txt  20221221-2.txt  20221221-3.txt
src/: algorithm.rs  board.rs  channel.rs  console.rs  lib.rs  main.rs  message.rs  player.rs
(+71 files in other folders)
