[package]
name = "connect6"
version = "0.1.0"
authors = ["Scallop Ye <yescallop@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
displaydoc = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

# Commented out to reduce compile time
#
# [dev-dependencies]
# criterion = "0.4"
#
# [[bench]]
# name = "algorithm"
# harness = false
